[gd_scene load_steps=5 format=3 uid="uid://cs08oidcho0kl"]

[ext_resource type="Script" path="res://scripts/minecart.gd" id="1_mo6pp"]
[ext_resource type="Texture2D" uid="uid://bddrnrgd36jyl" path="res://sprites/minecart_body.png" id="2_f6m2o"]
[ext_resource type="Texture2D" uid="uid://csr7rbsnhvr5q" path="res://sprites/minecart_wheel.png" id="3_7buvm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y8kxb"]
size = Vector2(64, 41)

[node name="Minecart" type="CharacterBody2D"]
script = ExtResource("1_mo6pp")

[node name="MinecartBody" type="Sprite2D" parent="."]
texture = ExtResource("2_f6m2o")

[node name="MinecartWheel" type="Sprite2D" parent="MinecartBody"]
position = Vector2(22, 20)
texture = ExtResource("3_7buvm")

[node name="MinecartWheel2" type="Sprite2D" parent="MinecartBody"]
position = Vector2(-22, 20)
texture = ExtResource("3_7buvm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_y8kxb")
